--- a/jumbotron/index.html
+++ b/jumbotron/index.html
@@ -80,8 +80,8 @@
           <div class="col-md-6">
         {{ message }} <br><br>
         <input type="text" class="form-control" v-model="message"><br><br>
-        <p><a v-on:click="action" class="btn btn-primary btn-lg" href="#" role="button">Action !! &raquo;</a></p>
-        <p><a v-on:click="action2" class="btn btn-primary btn-lg" href="#" role="button">Action 2</a></p>
+        <p><a v-on:click="action" class="btn btn-primary btn-lg" href="#/" role="button">Action !! &raquo;</a></p>
+        <p><a v-on:click="action2" class="btn btn-primary btn-lg" href="#/" role="button">Action 2</a></p>
 
         <div v-if="remote">
         <ol>
@@ -93,7 +93,7 @@
 
           </div>
           <div class="col-md-6">
-            <p><a v-on:click="show" class="btn btn-primary btn-lg" href="#" role="button">Show Secret Message</a></p>
+            <p><a v-on:click="show" class="btn btn-primary btn-lg" href="#/" role="button">Show Secret Message</a></p>
 
             <transition name="fade">
               <div v-if="seen" class="alert alert-primary" role="alert">
