--- a/jumbotron/index.html
+++ b/jumbotron/index.html
@@ -100,7 +100,7 @@
                 The secret message is : {{ message }}
               </div>
             </transition>
-
+            <div id="chart_div"></div>
           </div>          
         </div>
       </div>
@@ -144,6 +144,7 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
       var app = new Vue({
@@ -183,7 +184,39 @@
               
               this.remote = true;
           }
-        }
+        },
+        created: function () {
+            google.charts.load('current', {packages: ['corechart', 'bar']});
+            google.charts.setOnLoadCallback(drawBasic);
+
+            function drawBasic() {
+
+                  var data = google.visualization.arrayToDataTable([
+                    ['City', '2010 Population',],
+                    ['New York City, NY', 8175000],
+                    ['Los Angeles, CA', 3792000],
+                    ['Chicago, IL', 2695000],
+                    ['Houston, TX', 2099000],
+                    ['Philadelphia, PA', 1526000]
+                  ]);
+
+                  var options = {
+                    title: 'Population of Largest U.S. Cities',
+                    chartArea: {width: '50%'},
+                    hAxis: {
+                      title: 'Total Population',
+                      minValue: 0
+                    },
+                    vAxis: {
+                      title: 'City'
+                    }
+                  };
+
+                  var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+
+                  chart.draw(data, options);
+    }
+          }
       })
     </script>
   </body>
