--- a/jumbotron/index.html
+++ b/jumbotron/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> -->
-      <nav class="navbar navbar-expand-md navbar-light bg-faded fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #000000;">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
